--- a/public/fuzz/FuzzQuiz.html
+++ b/public/fuzz/FuzzQuiz.html
@@ -26,9 +26,7 @@
 
 	<div id="message">Message: </div>
 	</br>
-	 Make a new Hidden Message: <input type="text" size='50'>
-	</br>
-	<a href="#">GO</a>
+	 Make a new Hidden Message: <input type="text" size='50'>&nbsp;<a href="#">SCRAMBLE ›</a>
 	</br>
 	</br>
 <div class="secret">
