--- a/public/fis/index.html
+++ b/public/fis/index.html
@@ -36,6 +36,8 @@ You can see the full spreadsheet here
 <p>
 <h2>User Guide is <a href="https://docs.google.com/document/d/1G4jLcndPLjX9I4Qt1wE-xoGmCLrQoXP72mtLfqTNeNA/edit?usp=sharing">here</a></h2>
 </p>
+<h2>Tasks System</h2>
+<p><a href="https://www.pivotaltracker.com/s/projects/864345"><img src="img/piv_logo.png"></a></p>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
