--- a/public/fis/index.html
+++ b/public/fis/index.html
@@ -27,7 +27,8 @@ If the red dot is over the blue then we are falling behind.
 You can see the full spreadsheet here
     <a href="https://docs.google.com/spreadsheet/ccc?key=0AiIQiVME92jwdHg4cGFGUnRoRGFjRGZHY1JKeGR1dGc&usp=sharing">
         SpreadSheet
-    </a>
+    </a><br>
+    The <b>Issue Log</b> sheet will show the items you listed in your document.</br>
 </p>
 <p>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/static/modules/gviz/1.0/chart.js"> {"dataSourceUrl":"//docs.google.com/spreadsheet/tq?key=0AiIQiVME92jwdHg4cGFGUnRoRGFjRGZHY1JKeGR1dGc&transpose=0&headers=1&range=L2%3AN23&gid=10&pub=1","options":{"pointSizeScatter":7,"titleX":"Iteration Timeline (days)","animation":{"duration":0},"backgroundColor":{"fill":"#ffffff"},"pointSize":"2","colors":["#4684EE","#DC3912","#FF9900","#008000","#666666","#4942CC","#CB4AC5","#D6AE00","#336699","#DD4477","#AAAA11","#66AA00","#888888","#994499","#DD5511","#22AA99","#999999","#705770","#109618","#A32929"],"lineWidth":0,"is3D":false,"hAxis":{"useFormatFromData":true,"minValue":null,"viewWindow":{"min":null,"max":null},"maxValue":null},"lineSize":2,"vAxes":[{"useFormatFromData":true,"title":"Remaining Effort (days)","minValue":null,"viewWindow":{"min":null,"max":null},"maxValue":null},{"useFormatFromData":true,"minValue":null,"viewWindow":{"min":null,"max":null},"maxValue":null}],"booleanRole":"certainty","title":"Survey Forecast","legend":"bottom","useFirstColumnAsDomain":false,"reverseAxis":false,"tooltip":{},"isStacked":false,"width":759,"height":377},"state":{},"view":{},"isDefaultVisualization":true,"chartType":"ScatterChart","chartName":"Iteration 1 Burn Down"} </script>
