Remove content sweeper for now

--- a/public/about.html
+++ b/public/about.html
@@ -9,7 +9,8 @@
 <link href="/assets/projects.css?body=1" media="all" rel="stylesheet" type="text/css" />
 <link href="/assets/application.css?body=1" media="all" rel="stylesheet" type="text/css" />
   <script src="/assets/ckeditor/ckeditor.js?body=1" type="text/javascript"></script>
-  
+  <meta content="authenticity_token" name="csrf-param" />
+<meta content="epBstr7HxVdeQ9mhFiWSGFnDCGtYZj8J/M4oLZX+L18=" name="csrf-token" />
   <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
   <!-- For iPhone with high-resolution Retina display: -->
@@ -251,8 +252,8 @@
 	</div>
 </div>
 
+
     </div>
-  
     <div id="footer">
       <div class="container">
         <div class="row-fluid">
